--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 
 <html>
+<head>
+  <meta charset="utf-8"/>
+</head>
 
 <body>
   <script src='./src/note-model.js'></script>
   <script src='./src/note-list-model.js'></script>
   <script src='./spec/note-model-spec.js'></script>
   <script src='./spec/note-list-model-spec.js'></script>
+  <script src='./src/note-list-view.js'></script>
+  <script src='./spec/note-list-view-spec.js'></script>
 </body>
 
 </html>
